--- a/spreadsheet_oca/views/spreadsheet_spreadsheet.xml
+++ b/spreadsheet_oca/views/spreadsheet_spreadsheet.xml
@@ -17,9 +17,8 @@
         <field name="name">spreadsheet.spreadsheet.tree (in spreadsheet_oca)</field>
         <field name="model">spreadsheet.spreadsheet</field>
         <field name="arch" type="xml">
-            <tree>
+            <tree js_class="spreadsheet_list">
                 <field name="name" />
-                <button name="open_spreadsheet" type="object" string="Open" />
             </tree>
         </field>
     </record>
