--- a/spreadsheet_oca/views/spreadsheet_spreadsheet.xml
+++ b/spreadsheet_oca/views/spreadsheet_spreadsheet.xml
@@ -24,7 +24,7 @@
     </record>
 
     <record model="ir.actions.act_window" id="spreadsheet_spreadsheet_act_window">
-        <field name="name">Spreadsheet Spreadsheet</field> <!-- TODO -->
+        <field name="name">Spreadsheet</field> <!-- TODO -->
         <field name="res_model">spreadsheet.spreadsheet</field>
         <field name="view_mode">tree</field>
         <field name="domain">[]</field>
@@ -32,7 +32,7 @@
     </record>
 
     <record model="ir.ui.menu" id="spreadsheet_spreadsheet_menu">
-        <field name="name">Spreadsheet Spreadsheet</field>
+        <field name="name">Spreadsheet</field>
         <field name="action" ref="spreadsheet_spreadsheet_act_window" />
         <field name="sequence" eval="16" />
     </record>
