--- a/spreadsheet_oca/views/spreadsheet_spreadsheet.xml
+++ b/spreadsheet_oca/views/spreadsheet_spreadsheet.xml
@@ -24,7 +24,7 @@
     </record>
 
     <record model="ir.actions.act_window" id="spreadsheet_spreadsheet_act_window">
-        <field name="name">Spreadsheet</field> <!-- TODO -->
+        <field name="name">Spreadsheet</field>
         <field name="res_model">spreadsheet.spreadsheet</field>
         <field name="view_mode">tree</field>
         <field name="domain">[]</field>
