[IMP] spreadsheet_oca: add rules

--- a/spreadsheet_oca/views/spreadsheet_spreadsheet.xml
+++ b/spreadsheet_oca/views/spreadsheet_spreadsheet.xml
@@ -47,6 +47,11 @@
                     <h1>
                         <field name="name" placeholder="Name" />
                     </h1>
+                    <group>
+                        <field name="owner_id" />
+                        <field name="contributor_ids" widget="many2many_tags" />
+                        <field name="reader_ids" widget="many2many_tags" />
+                    </group>
                 </sheet>
             </form>
         </field>
