--- a/spreadsheet_oca/views/spreadsheet_spreadsheet.xml
+++ b/spreadsheet_oca/views/spreadsheet_spreadsheet.xml
@@ -51,7 +51,10 @@
                         <field name="owner_id" />
                         <field name="contributor_ids" widget="many2many_tags" />
                         <field name="reader_ids" widget="many2many_tags" />
+                        <field name="data" filename="filename" />
+                        <field name="filename" invisible="1" />
                     </group>
+                    <field name="spreadsheet_revision_ids" />
                 </sheet>
             </form>
         </field>
