[FIX] spreadsheet_oca: make field name required

--- a/spreadsheet_oca/static/src/spreadsheet/spreadsheet.scss
+++ b/spreadsheet_oca/static/src/spreadsheet/spreadsheet.scss
@@ -17,4 +17,7 @@
             @include print-variable(o-caret-color, $o-brand-primary);
         }
     }
+    .o_spreadsheet_oca_name_warning {
+        font-size: 0.8em;
+    }
 }
