--- a/spreadsheet_oca/views/spreadsheet_spreadsheet.xml
+++ b/spreadsheet_oca/views/spreadsheet_spreadsheet.xml
@@ -71,6 +71,7 @@
         <field name="name">Spreadsheets</field>
         <field name="action" ref="spreadsheet_spreadsheet_act_window" />
         <field name="web_icon">spreadsheet_oca,static/description/icon.svg</field>
+        <field name="groups_id" eval="[(4, ref('spreadsheet_oca.group_user'))]" />
         <field name="sequence" eval="16" />
     </record>
 
