[IMP] spreadsheet_dashboard_oca: Set edit button permissions properly

--- a/spreadsheet_dashboard_oca/views/spreadsheet_dashboard.xml
+++ b/spreadsheet_dashboard_oca/views/spreadsheet_dashboard.xml
@@ -28,6 +28,7 @@
                     type="object"
                     string="Edit"
                     icon="fa-pencil"
+                    groups="base.group_system"
                 />
             </tree>
         </field>
