[FIX] spreadsheet_dashboard_oca: error when adding spreasheet with option 'To dashboard new sheet'
-STEP TO REPRODUCE: Debug mode on and go to any view which can be added
to spreadsheet, select option 'To dashboard new sheet' -> js error
-SOLUTION: we need to show Dashboard for user to choose

--- a/spreadsheet_dashboard_oca/wizards/spreadsheet_spreadsheet_import.xml
+++ b/spreadsheet_dashboard_oca/wizards/spreadsheet_spreadsheet_import.xml
@@ -16,7 +16,7 @@
             <field name="spreadsheet_id" position="after">
                 <field
                     name="dashboard_id"
-                    attrs="{'invisible': [('mode', '!=', 'dashboard')], 'required': [('mode', '=', 'dashboard')]}"
+                    attrs="{'invisible': [('mode', 'not in', ('dashboard', 'dashboard_sheet'))], 'required': [('mode', 'in', ('dashboard', 'dashboard_sheet'))]}"
                     options="{'no_create': True}"
                 />
             </field>
