[MIG] spreadsheet_oca: Migration to 17.0

--- a/spreadsheet_oca/wizards/spreadsheet_spreadsheet_import.xml
+++ b/spreadsheet_oca/wizards/spreadsheet_spreadsheet_import.xml
@@ -15,7 +15,8 @@
                         <field name="mode_id" widget="selection_badge" />
                         <field
               name="name"
-              attrs="{'invisible': [('mode', '!=', 'new')], 'required': [('mode', '=', 'new')]}"
+              invisible="mode != 'new'"
+              required="mode == 'new'"
             />
                         <field name="datasource_name" required="1" />
                         <field name="mode" invisible="1" />
@@ -23,7 +24,8 @@
                         <field
               name="spreadsheet_id"
               domain="['|', ('owner_id', '=', uid), ('contributor_ids', '=', uid)]"
-              attrs="{'invisible': [('mode', 'not in', ['add', 'add_sheet'])], 'required': [('mode', 'in', ['add', 'add_sheet'])]}"
+              invisible="mode not in ['add', 'add_sheet']"
+              required="mode in ['add', 'add_sheet']"
               options="{'no_create': True}"
             />
                         <field name="can_be_dynamic" invisible="1" />
@@ -31,11 +33,13 @@
                         <field
               name="dynamic"
               force_save="1"
-              attrs="{'invisible': [('can_be_dynamic', '=', False)], 'readonly': [('is_tree', '=', True)]}"
+              invisible="not can_be_dynamic"
+              readonly="is_tree"
             />
                         <field
               name="number_of_rows"
-              attrs="{'invisible': [('dynamic', '=', False)], 'required': [('dynamic', '=', True)]}"
+              invisible="not dynamic"
+              required="dynamic"
             />
                     </group>
                 </sheet>
