--- a/spreadsheet_oca/views/spreadsheet_spreadsheet.xml
+++ b/spreadsheet_oca/views/spreadsheet_spreadsheet.xml
@@ -85,7 +85,7 @@
         <field name="action" ref="spreadsheet_spreadsheet_act_window" />
         <field
       name="web_icon"
-    >spreadsheet_oca,static/description/icon.svg</field>
+    >spreadsheet_oca,static/description/icon.png</field>
         <field
       name="groups_id"
       eval="[(4, ref('spreadsheet_oca.group_user'))]"
